// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should render correctly 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable"
  >
    <input
      class="rmd-text-field"
      id="field"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField should render correctly 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
  >
    <label
      class="rmd-label rmd-floating-label"
      for="field"
    >
      Label
    </label>
    <input
      class="rmd-text-field rmd-text-field--floating"
      id="field"
      placeholder="Placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField should render correctly 3`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label"
  >
    <label
      class="rmd-label rmd-label--disabled rmd-floating-label"
      for="field"
    >
      Label
    </label>
    <input
      class="rmd-text-field rmd-text-field--floating"
      disabled=""
      id="field"
      placeholder="Placeholder"
      type="text"
    />
  </div>
</div>
`;
